--- a/index.html
+++ b/index.html
@@ -19,10 +19,25 @@
 <body>
     <!-- Header Start -->
     <header>
-
+        <nav class="header-container">
+            <div class="header-contents">
+                <span class="left-header-contents">
+                    <p> <i class="far fa-lightbulb"></i> Idea </p>
+                </span>
+                <span class="right-header-contents">
+                    <p class="header-links">
+                        <a href="">Home</a>
+                        <a href="">About</a>
+                        <a href="">Works</a>
+                    </p>
+                    <img class="header-image" src="images/icons/profile.png" alt="">
+                </span>
+            </div>
+        </nav>
     </header>
     <!-- Header End -->
 
+    <!-- Main Start -->
     <main>
         <section class="container">
             <div class="top-players-container">
@@ -193,6 +208,7 @@
             </div>
         </section>
     </main>
+    <!-- Main End -->
 
 </body>
 
