--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="header-container">
             <div class="header-contents">
                 <span class="left-header-contents">
-                    <p> <i class="far fa-lightbulb"></i> Idea </p>
+                    <p> <i class="far fa-lightbulb fa-3x"></i> <span class="idea-style">Idea </span></p>
                 </span>
                 <span class="right-header-contents">
                     <p class="header-links">
